TestRepo2/src/objects/Diageo_Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <displayFormat>RI-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ActionGroup__c</fullName>
        <label>ActionGroup</label>
        <picklist>
            <picklistValues>
                <fullName>Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stir</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Featured_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ingredient_Number__c</fullName>
        <label>Ingredient Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingredient_Unit__c</fullName>
        <formula>TEXT(Units__c)   &amp;  Text(Non_Diageo_Product_Units__c)</formula>
        <label>Ingredient Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Diageo_Product_Units__c</fullName>
        <label>Non Diageo Product Units</label>
        <picklist>
            <picklistValues>
                <fullName>750ml Bottle(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bar spoon(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bud(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cube(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cup(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dash(es)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dollop(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ea.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>grind(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lb.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>leaf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>liter(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ml.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>oz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>piece(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pinch(es)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scoop(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>segment(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shaving(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shot(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>slice(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>splash(es)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sprinkle(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>squeeze(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>swirl(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tbsp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>top(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tsp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>0.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipName>Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Diageo Product</label>
        <referenceTo>Diageo_Product__c</referenceTo>
        <relationshipName>Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Ingredient_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Recipe Ingredient External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Non_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup that allows to select a Non-Diageo/Custom  Ingredient</description>
        <label>Recipe Non-Diageo Product</label>
        <referenceTo>Recipe_Non_Diageo_Product__c</referenceTo>
        <relationshipLabel>Recipe Ingredients</relationshipLabel>
        <relationshipName>Recipe_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Ingredients</relationshipLabel>
        <relationshipName>Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Diageo Product Units</label>
        <picklist>
            <picklistValues>
                <fullName>bottle(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cup(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dash(es)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>drop(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ml.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>oz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pint(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rinse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>splash(es)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tbsp(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tsp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tsp(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recipe Ingredient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Recipe__c</columns>
        <columns>Quantity__c</columns>
        <columns>Ingredient_Unit__c</columns>
        <columns>Recipe_Diageo_Product__c</columns>
        <columns>Units__c</columns>
        <columns>Recipe_Non_Diageo_Product__c</columns>
        <columns>Non_Diageo_Product_Units__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Edit_Action_Group</fullName>
        <columns>Recipe__c</columns>
        <columns>ActionGroup__c</columns>
        <columns>Recipe_Diageo_Product__c</columns>
        <columns>Recipe_Non_Diageo_Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Edit Action Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RCP_4167</fullName>
        <columns>NAME</columns>
        <columns>Recipe__c</columns>
        <columns>Quantity__c</columns>
        <columns>Ingredient_Unit__c</columns>
        <columns>Recipe_Diageo_Product__c</columns>
        <columns>Units__c</columns>
        <columns>Recipe_Non_Diageo_Product__c</columns>
        <columns>Non_Diageo_Product_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recipe__c</field>
            <operation>equals</operation>
            <value>RCP-4167</value>
        </filters>
        <label>RCP-4167</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Diageo Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>